--- a/simple_mod_node.info.yml
+++ b/simple_mod_node.info.yml
@@ -1,5 +1,8 @@
-name: 'Simple Mod Node'
+name: 'Simple Modify Node'
 type: module
 description: A simple module to find all SimpleNews digest, flag them, and publish them for email.
 core: 8.x
-package: Custom
+package: Northwestern
+configure: admin.settings.system
+dependencies:
+  - drupal:ctools
